# nanposweb

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
nanposweb/: __init__.py  account.py  admin.py  auth.py  forms.py  helpers.py  main.py  models.py  util.py
nanposweb/admin/: __init__.py  forms.py  helpers.py  products.py  statistics.py  users.py
nanposweb/admin/templates/products/: form.html  index.html
nanposweb/admin/templates/statistics/: index.html
nanposweb/admin/templates/user/: view.html
nanposweb/admin/templates/users/: balance.html  form.html  index.html
nanposweb/db/: helpers.py  models.py
nanposweb/static/: cardReader.js  custom.css  login.css
nanposweb/templates/: account.html  admin.html  bank_account.html  base.html  index.html  login.html  macros.html  signup.html  site.html  verify.html
nanposweb/templates/account/: change_card.html  change_pin.html  index.html
nanposweb/templates/product/: form.html  view.html
nanposweb/templates/user/: view.html
