[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['nanposweb']

[project]
name = "nanposweb"
description = "A simple point of sale system for drinks"
requires-python= ">=3.9"
license = {text = "MIT"}
version = "1.3.2"
dependencies = [
	"Flask==2.2.3",
	"Flask-SQLAlchemy",
	"Flask-Login",
	"Flask-WTF",
	"Flask-Principal",
	"psycopg2-binary",
	"werkzeug==2.2.3",
]

[project.optional-dependencies]
dev = ['flake8']