[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['nanposweb']

[project]
name = "nanposweb"
description = "A simple point of sale system for drinks"
requires-python= ">=3.9"
license = {text = "MIT"}
version = "1.3.3"
dependencies = [
	"Flask>=3.1.0",
	"Flask-SQLAlchemy",
	"Flask-Login>=0.6.2",
	"Flask-WTF",
	"Flask-Principal",
	"psycopg2-binary",
	"werkzeug>=3.1.0",
]

[project.optional-dependencies]
dev = ['ruff']

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.9
target-version = "py311"
